tests/baselines/reference/typeArgumentInferenceWithClassExpression2.errors.txt
tests/cases/conformance/es6/classExpressions/typeArgumentInferenceWithClassExpression2.ts(6,5): error TS2345: Argument of type 'typeof (Anonymous class)' is not assignable to parameter of type 'typeof (Anonymous class)'.
  Property 'prop' is missing in type '(Anonymous class)' but required in type 'foo<unknown>.(Anonymous class)'.


==== tests/cases/conformance/es6/classExpressions/typeArgumentInferenceWithClassExpression2.ts (1 errors) ====
    function foo<T>(x = class { prop: T }): T {
        return undefined;
    }
    
    // Should not infer string because it is a static property
    foo(class { static prop = "hello" }).length;
        ~~~~~
!!! error TS2345: Argument of type 'typeof {|(Anonymous class)|0|}' is not assignable to parameter of type 'typeof {|(Anonymous class)|1|}'.
!!! error TS2345:   Property 'prop' is missing in type '{|(Anonymous class)|2|}' but required in type '{|foo|3|}<unknown>.{|(Anonymous class)|4|}'.
!!! related TS2728 tests/cases/conformance/es6/classExpressions/typeArgumentInferenceWithClassExpression2.ts:1:29: 'prop' is declared here.
!!! annotated symbol 0 tests/cases/conformance/es6/classExpressions/typeArgumentInferenceWithClassExpression2.ts:6:5
!!! annotated symbol 1 tests/cases/conformance/es6/classExpressions/typeArgumentInferenceWithClassExpression2.ts:1:21
!!! annotated symbol 2 tests/cases/conformance/es6/classExpressions/typeArgumentInferenceWithClassExpression2.ts:6:5
!!! annotated symbol 3 tests/cases/conformance/es6/classExpressions/typeArgumentInferenceWithClassExpression2.ts:1:10
!!! annotated symbol 4 tests/cases/conformance/es6/classExpressions/typeArgumentInferenceWithClassExpression2.ts:1:21